# kuka_honeypot_demo

./: CMakeLists.txt  package.xml
data/: test.bag
launch/: demo.launch  state_publisher.launch
resources/: rviz.rviz  spoon.urdf
scripts/: honeypot_demo.py  joint_state_bag_republish.py
