<?xml version="1.0"?>
<package format="2">
  <name>kuka_honeypot_demo</name>
  <version>0.0.0</version>
  <description>Honeypot demo</description>

  <author email="annonymous@annonymous.an">Jake Bretherton</author>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>robot_state_publisher</depend>
  <depend>lwr_defs</depend>
  <depend>sensor_msgs</depend>
  <depend>ipab_lwr_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>numpy</depend>
</package>
